feat: add router + landing/home + navbar/footer

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <style>
+      :root { --ch-font: "Noto Serif TC", serif; --en-font: "Playfair Display", serif; }
+      body { font-family: var(--ch-font); }
+      .font-serif { font-family: var(--en-font); }
+    </style>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
